// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render fields when the schema contains a visible flag of false 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-12 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      />
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="item gridItem size size-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/text"
      >
        Text
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <label
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Should render field types based on schema 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem size size-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/text"
      >
        Text
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="text"
          />
        </div>
      </div>
      <label
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem size size-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="/datetime"
      >
        Datetime
      </label>
      <div
        class="fieldContainer"
      >
        <div
          class="field"
        >
          <input
            type="datetime"
          />
        </div>
      </div>
      <label
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Should render nested sections 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-12 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 1
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item11"
        >
          Item 1.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
    <div
      class="section gridSection size size-12 space-before-0 space-after-0"
    >
      <div
        class="item size size-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 1.1
        </div>
      </div>
    </div>
  </div>
  <div
    class="section gridSection size size-12 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item21"
        >
          Item 2.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render sections with size 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-8 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 1
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item11"
        >
          Item 1.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="section gridSection size size-4 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item21"
        >
          Item 2.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render sections without label 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-8 space-before-0 space-after-0"
  >
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item11"
        >
          Item 1.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="section gridSection size size-4 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="/item21"
        >
          Item 2.1
        </label>
        <div
          class="fieldContainer"
        >
          <div
            class="field"
          >
            <input
              type="text"
            />
          </div>
        </div>
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;
